# psychology-backend-sim

./: .gitignore  README.md  __init__.py  agent.md  backend-frontend-interface.md  create_frontend_database.py  database_schema_variables.md  generate_backend_input.py  oasis_adapter.py  psychology_backend_frontend.db  pyproject.toml  run_backend_input.py  viewer.html  webapp.py  修改建议.md
config/: __init__.py  backend_settings.py  frontend_settings.py
data/: __init__.py
data/oasis_reddit/: __init__.py  oasis_adapter.py  oasis_data_conversion.md  oasis_to_backend_mapping.csv
demo/backend-demo/: README.md  pyproject.toml
demo/backend-demo/app/: __init__.py  main.py
environment/: __init__.py  env.py  env_action.py  make.py  scenario.py
examples/: __init__.py  _tmp_input.json  backend_oasis_input.json  backend_sample_input.json  generate_backend_input.py  start.py
outputs/: simulation_snapshot.json  teacher_labels.json  training_dataset.json
outputs/checkpoints/: appraisal_moe_checkpoint.npz  emotion_encoder_checkpoint.npz
scripts/: build_llm_teacher_labels.py  build_training_dataset.py  eval_learned_modules.py  train_appraisal_moe.py  train_emotion_encoder.py
services/: __init__.py  debug_io.py  deepseek_client.py  llm_provider.py  ollama_client.py  volcengine_client.py
social_agent/: __init__.py  agent.py  agent_action.py  agent_environment.py  agent_graph.py  agents_generator.py  appraisal_moe.py  cam_memory.py  emotion_representation.py
social_platform/: __init__.py  action_dispatcher.py  channel.py  database.py  emotion_detector.py  platform.py  platform_utils.py  storage.py  typing.py
social_platform/schema/: agent_graph_edges.sql  agent_graph_info.sql  agent_snapshots.sql  input_agents.sql  input_meta.sql  input_relationships.sql  input_runtime.sql  input_scenario.sql  input_seed_posts.sql  platform_influence_events.sql  platform_likes.sql  platform_posts.sql  platform_replies.sql  platform_shares.sql  platform_snapshot.sql  platform_traces.sql  round_history.sql  round_results.sql  snapshot_debug.sql  snapshot_info.sql
