[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychology-backend"
version = "0.1.0"
description = "Async social psychology simulation backend with FastAPI debug endpoints and optional external cognitive providers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "numpy>=1.26,<3.0",
  "requests>=2.31,<3.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
backend-generate-input = "generate_backend_input:main"
backend-run = "run_backend_input:main"

[tool.setuptools]
include-package-data = true
py-modules = ["generate_backend_input", "oasis_adapter", "run_backend_input", "webapp"]

[tool.setuptools.packages.find]
where = ["."]
include = [
  "config",
  "environment",
  "services",
  "social_agent",
  "social_platform",
]

[tool.uv]
dev-dependencies = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]
