[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychology-backend"
version = "0.1.0"
description = "Async social psychology simulation backend driven by JSON payloads and CLI runs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<3.0",
  "requests>=2.31,<3.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
backend-generate-input = "examples.generate_backend_input:main"
backend-run = "examples.start:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "config",
  "data",
  "data.oasis_reddit",
  "examples",
  "environment",
  "services",
  "social_agent",
  "social_platform",
]

[tool.uv]
dev-dependencies = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]
