[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend-demo"
version = "0.1.0"
description = "A thin demo wrapper that runs the real Backend FastAPI app without reimplementing it."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "numpy>=1.26,<3.0",
  "requests>=2.31,<3.0",
  "uvicorn>=0.30,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*"]
